--- a/doc/html/docStyle.css
+++ b/doc/html/docStyle.css
@@ -5,12 +5,6 @@ html{
     margin-right:2%;
     font-family:"Lucida Grande", verdana, arial, sans-serif;
 }
-body {
-    font-size:110%;
-}
-table {
-    font-size:110%;
-}
 hr {
     color:#ccc; /*BO7*/
     background-color:#ccc; /*BO7*/
@@ -26,12 +20,9 @@ pre, code, tt {
     background-color:#F6F6F6;
     color:#7A4707; /*T6*/
     width:100%;
-    font-size:140%;
+    font-size:12pt;
 }
 
-h1 {
-    font-size:160%;
-}
 
 h1, h2, h3, h4, h5, h6 {
     color:#a00;
@@ -44,6 +35,7 @@ h2,h3, h4, h5, h6 {
 }
 h1{
     margin-left:-6%;
+    font-size:18pt;
 }
 h2{
     background-color:#FDFAF1;
@@ -58,7 +50,6 @@ a:hover {
 }
 .footer {
     color:#6E7175; /*T8*/
-    font-size:120%;
     margin-left:-6%;
 }
 .backGround {
@@ -66,7 +57,6 @@ a:hover {
 }
 .grayText {
     color:#6E7175; /*T8*/
-    font-size:120%;
 }
 .grayText a:link,
 .grayText a:visited {
